# CppFormat

./: .gitignore  CMakeLists.txt  CppFormat.cpp  README.md  csv_parser.h  ejemplo.txt  ejemplo.txt.processed  ejemplo_processed.txt  file_utils.cpp  file_utils.h  formato.csv  formato.json  formato_processor_gui.cpp  json_parser.h  main.cpp  main_window.cpp  main_window.h
include/: pch.h
